# rust_extractor_mail

./: .gitignore  BENCH.md  CHANGELOG.md  Cargo.toml  README.md  config.toml.example  ecosystem.config.cjs
.cargo/: audit.toml
.github/workflows/: security-audit.yml
crates/extract-mail/: Cargo.toml  README.md
crates/extract-mail/src/: main.rs
crates/extract-mail/tests/: cli_smoke.rs
crates/extractor-core/: Cargo.toml  README.md
crates/extractor-core/src/: lib.rs  matcher.rs  scanner.rs
crates/extractor-core/tests/: boundary.rs  carry_overflow.rs  chunked_feed.rs  empty_inputs.rs  plain_match.rs  sink_error.rs  url_match.rs
crates/telegram-client/: Cargo.toml  README.md
crates/telegram-client/src/: config.rs  lib.rs  main.rs  observability.rs  output.rs
crates/telegram-client/src/cmd/: auth.rs  backfill.rs  chats.rs  fetch.rs  join.rs  mod.rs  retry_uploads.rs  stats.rs  watch.rs
crates/telegram-client/src/pipeline/: coordinator.rs  disk.rs  format.rs  interfile.rs  mod.rs  progress.rs  sink.rs  stream.rs  upload.rs
crates/telegram-client/src/store/: mod.rs  repo.rs  schema.sql
crates/telegram-client/src/telegram/: client.rs  download.rs  link_parser.rs  mock.rs  mod.rs
crates/telegram-client/src/upload/: caption.rs  mod.rs
crates/telegram-client/tests/: cli_help.rs  cmd_backfill.rs  cmd_chats.rs  cmd_fetch.rs  cmd_join.rs  cmd_retry_uploads.rs  cmd_stats_smoke.rs  cmd_watch.rs  config_validation.rs  format_detect.rs  link_parser.rs  mock_client_history_updates.rs  mock_client_stream.rs  observability_rotation.rs  observability_scrub.rs  output_safe_path.rs  pipeline_inter_file_cap.rs  pipeline_interfile_cancellation.rs  pipeline_interfile_e2e.rs  pipeline_interfile_serialization.rs  pipeline_interfile_skeleton.rs  pipeline_interfile_stage1.rs  pipeline_interfile_stage2.rs  pipeline_log_leakage_e2e.rs  pipeline_path_traversal_e2e.rs  pipeline_progress_off_in_non_tty.rs  pipeline_stream.rs  pipeline_zip.rs  pipeline_zip_bomb_e2e.rs  secrets_redact.rs  sink_writer.rs  store_cursors.rs  store_dead_letter.rs  store_enqueue.rs  store_failed_uploads.rs  store_open.rs  store_recovery.rs  store_stats_helpers.rs  upload_caption.rs  upload_retry.rs  (+3 more)
crates/telegram-client/tests/common/: mod.rs
docs/superpowers/plans/: 2026-05-07-telegram-large-file-pipeline.md
docs/superpowers/specs/: 2026-05-07-telegram-large-file-pipeline-design.md
scripts/: run-watch.sh  timing-report.sh
