[package]
name         = "extractor-core"
version      = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
description  = "Zero-I/O domain-keyed line extraction logic for extract-mail and tg-extract."

[dependencies]
memchr    = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
